--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,3 +1,4 @@
+/* Cabecera */
 .cabecera__container {
     display: flex;
     justify-content: space-between;
@@ -7,8 +8,21 @@
 .cabecera__buscar__item {
     display: none;
 }
+
+/* Rodapie */
+.rodapie__container {
+    display: flex;
+    flex-flow: column wrap;
+}
+
 @media (min-width: 834px ) {
+    /* Cabecera */
     .cabecera__buscar__item {
         display: block;
+    }
+
+    /* Rodapie */
+    .rodapie__container {
+        justify-content: space-between;
     }
 }
