Añadir propiedades flexbox a la sección superior

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -15,6 +15,15 @@
     flex-flow: column wrap;
 }
 
+/* Sección superior */
+.superior__seccion__container {
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    overflow: scroll;
+    gap: 16px;
+}
+
 @media (min-width: 834px ) {
     /* Cabecera */
     .cabecera__buscar__item {
