--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -50,6 +50,35 @@
     display: none;
 }
 
+/* Videos */
+.videos__container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+}
+.videos__item {
+    height: 303px;
+    width: 280px;
+    flex-grow: 1;
+}
+.descripcion-video {
+    margin-top: 1rem;
+    display: flex;
+    align-items: flex-start;
+}
+.descripcion-video img {
+    margin-right: 1rem; 
+    flex-shrink: 0;  /*  Evita que la imagen se reduzca */  
+}
+.detalles__video {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+.detalles__video h3{
+    margin-bottom: 10px;
+}
+
 @media (min-width: 834px) {
     /* Cabecera */
     .cabecera__buscar__item {
